<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, DNDMobileActivity!</string>
    <string name="app_name">Smart Mobi</string>

    <string-array name="choose_to_block">
        <item>Both call and message</item>
        <item>only call</item>
        <item>only message</item>
    </string-array>

    <string name="export">Send as Email</string>
    <string name="showblocked_message">Show Blocked message</string>
    <string name="profile_change">Profile Change</string>
    <string name="blockednolist">View block List</string>
    <string name="addto_block">Add to BlockList</string>
    <string name="manage_ringer">Set Ringing schedule</string>
    <string name="send_message">Send Message</string>
    <string name="successfully_saved">Successfully saved </string>
    <string name="add_blocknumbers">ADD TO BLOCK LIST</string>
    <string name="notoblock">Number to block</string>
    <string name="name">Name</string>
    <string name="blockonly">Block</string>
    <string name="back">Back</string>
    <string name="add_title">Add</string>
    <string name="cancel_title">Cancel</string>
    <string name="alert_no_blank">Enter Phone Number to Block</string>
    <string name="delete_title">Delete</string>
    <string name="alert_to_delete">Are you sure ?</string>
    <string name="ok_title">Ok</string>
    <string name="kphonebackup">Phone Backup</string>
    <string name="schedule_message">Schedule Message</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <string name="clear">clear</string>
    <string name="import_contact">Save to SD Card</string>
    <string name="start_date">Start  Date</string>
    <string name="end_date">End  Date</string>
    <string name="start_time">Start  Time</string>
    <string name="end_time">End  Time</string>
    <string name="set_profile">Profile</string>
    <string name="profile_sound">Sound</string>
    <string name="profile_vibration1">Only Vibration</string>
    <string name="profile_vibration2">Vibration</string>
    <string name="profile_silent">Silent</string>
    <string name="details">Details</string>
    <string name="write">Writing Contact..</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>
