<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:id="@+id/keypad"
    >

    <RelativeLayout
        android:id="@+id/enter_passcode_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/enter_passcode_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_passcode_header"
         >

        <EditText
            android:id="@+id/passcode_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dip"
            android:inputType="number"
            
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:password="true"
            android:textSize="24dip" />

        <RelativeLayout
            android:id="@+id/number_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passcode_edittext"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" >

            <Button
                android:id="@+id/button1"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_selector"
                android:text="@string/_1"
                android:textColor="@color/white"
                android:textSize="20dip"
                android:width="100dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_toRightOf="@+id/button1"
                android:background="@drawable/button_selector"
                android:text="@string/_2"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/button3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/button2"
                android:background="@drawable/button_selector"
                android:text="@string/_3"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/button4"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button1"
                android:layout_marginTop="5dip"
                android:background="@drawable/button_selector"
                android:text="@string/_4"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/button5"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button2"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/button4"
                android:background="@drawable/button_selector"
                android:text="5"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/button6"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button3"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/button5"
                android:background="@drawable/button_selector"
                android:text="@string/_6"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/button7"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button4"
                android:layout_marginTop="5dip"
                android:background="@drawable/button_selector"
                android:text="@string/_7"
                android:textColor="@color/white"
                android:textSize="20dip"
                />

            <Button
                android:id="@+id/button8"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button5"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/button7"
                android:background="@drawable/button_selector"
                android:text="@string/_8"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/button9"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button6"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/button8"
                android:background="@drawable/button_selector"
                android:text="@string/_9"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/button_help"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button7"
                android:layout_marginTop="5dip"
                android:background="@drawable/button_selector"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/button0"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button8"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/button_help"
                android:background="@drawable/button_selector"
                android:text="@string/_0"
                android:textColor="@color/white"
                android:textSize="20dip" />

            <Button
                android:id="@+id/button_clear"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button9"
                android:layout_marginTop="5dip"
                android:layout_toRightOf="@+id/button0"
                android:background="@drawable/button_selector"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="20dip" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>