<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearheder"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/statusbar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:background="@drawable/backbtn"
            android:onClick="click"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/TitletextView"
            style="@style/ButtonBar"
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:layout_weight="0.67"
            android:gravity="center_horizontal"
            android:text="@string/addto_block"
            android:textAppearance="?android:attr/textAppearanceLarge" >
        </TextView>

        <Button
            android:id="@+id/btn_option_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/listview"
            android:onClick="click"
            android:paddingTop="6dp" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutFuntionButtons"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linearheder" >
    </ListView>

    <RelativeLayout
        android:id="@+id/keypad"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/enter_passcode_body"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enter_passcode_header" >

            <EditText
                android:id="@+id/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dip"
                android:background="@drawable/inputnumber_field"
                android:inputType="number"
                android:maxLength="11"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:text=""
                android:textColor="#ffffff"
                android:textSize="24dip" />

            <RelativeLayout
                android:id="@+id/number_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edittext"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" >

                <Button
                    android:id="@+id/button1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="1"
                    android:text="@string/_1"
                    android:textColor="@color/white"
                    android:textSize="20dip"
                    android:width="100dp" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_toRightOf="@+id/button1"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="2"
                    android:text="@string/_2"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/button2"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="3"
                    android:text="@string/_3"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button1"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="4"
                    android:text="@string/_4"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button2"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@+id/button4"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="5"
                    android:text="5"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button3"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@+id/button5"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="6"
                    android:text="@string/_6"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button4"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="7"
                    android:text="@string/_7"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button5"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@+id/button7"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="8"
                    android:text="@string/_8"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button6"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@+id/button8"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="9"
                    android:text="@string/_9"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/saveNumber"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button7"
                    android:layout_marginTop="5dip"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/button0"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button8"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@+id/saveNumber"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:tag="0"
                    android:text="@string/_0"
                    android:textColor="@color/white"
                    android:textSize="20dip" />

                <Button
                    android:id="@+id/button_clear"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/button9"
                    android:layout_marginTop="5dip"
                    android:layout_toRightOf="@+id/button0"
                    android:background="@drawable/button_selector"
                    android:onClick="click"
                    android:text="@string/clear"
                    android:textColor="@color/white"
                    android:textSize="20dip" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutFuntionButtons"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/contactList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/contact_list"
            android:onClick="click" />

        <Button
            android:id="@+id/messageLog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/message_log"
            android:onClick="click" />

        <Button
            android:id="@+id/callhistory"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/call_history"
            android:onClick="click" />

        <Button
            android:id="@+id/enter_number"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/enter_number"
            android:onClick="click" />
    </LinearLayout>

    <ImageView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@android:id/list"
        android:layout_alignTop="@android:id/list"
        android:layout_marginBottom="25dp"
        android:scaleType="fitCenter"
        android:src="@drawable/empty_callhistory_msg"
        android:visibility="gone" />

</RelativeLayout>